--- a/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/seeds.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Hydroponics/seeds.yml
@@ -655,3 +655,13 @@
       seedId: lemo
     - type: Sprite
       sprite: Objects/Specific/Hydroponics/lemo.rsi
+
+- type: entity
+  parent: SeedBase
+  name: packet of kisser tomato seeds
+  id: KisserTomatoSeeds
+  components:
+    - type: Seed
+      seedId: kissertomato
+    - type: Sprite
+      sprite: Objects/Specific/Hydroponics/tomatokisser.rsi
