No meta implanters + other

--- a/Resources/Prototypes/Entities/Objects/Misc/implanters.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/implanters.yml
@@ -72,6 +72,8 @@
     # go wild with sentient chairs with macrobombs
     whitelist: null
     blacklist: null
+    implantTime: 5
+    drawTime: 5
 
 - type: entity
   id: BaseImplantOnlyImplanter
@@ -126,7 +128,7 @@
 
 - type: entity
   id: SadTromboneImplanter
-  name: sad trombone implanter
+  suffix: sad trombone
   parent: BaseImplantOnlyImplanter
   components:
     - type: Implanter
@@ -134,7 +136,7 @@
 
 - type: entity
   id: LightImplanter
-  name: light implanter
+  suffix: light
   parent: BaseImplantOnlyImplanter
   components:
     - type: Implanter
@@ -142,7 +144,7 @@
 
 - type: entity
   id: BikeHornImplanter
-  name: bike horn implanter
+  suffix: bike horn
   parent: BaseImplantOnlyImplanter
   components:
     - type: Implanter
@@ -152,8 +154,8 @@
 
 - type: entity
   id: TrackingImplanter
-  name: tracking implanter
-  parent: [ BaseImplantOnlyImplanter, BaseRestrictedContraband]
+  suffix: tracking
+  parent: BaseImplantOnlyImplanter
   components:
     - type: Implanter
       implant: TrackingImplant
@@ -162,7 +164,7 @@
 
 - type: entity
   id: StorageImplanter
-  name: storage implanter
+  suffix: storage
   parent: BaseImplantOnlyImplanterSyndi
   components:
     - type: Implanter
@@ -170,7 +172,7 @@
 
 - type: entity
   id: FreedomImplanter
-  name: freedom implanter
+  suffix: freedom
   parent: BaseImplantOnlyImplanterSyndi
   components:
     - type: Implanter
@@ -178,7 +180,7 @@
 
 - type: entity
   id: UplinkImplanter
-  name: uplink implanter
+  suffix: uplink
   parent: BaseImplantOnlyImplanterSyndi
   components:
   - type: Implanter
@@ -186,7 +188,7 @@
 
 - type: entity
   id: EmpImplanter
-  name: EMP implanter
+  suffix: EMP
   parent: BaseImplantOnlyImplanterSyndi
   components:
     - type: Implanter
@@ -194,7 +196,7 @@
 
 - type: entity
   id: ScramImplanter
-  name: scram implanter
+  suffix: scram
   parent: BaseImplantOnlyImplanterSyndi
   components:
     - type: Implanter
@@ -202,7 +204,7 @@
 
 - type: entity
   id: DnaScramblerImplanter
-  name: DNA scrambler implanter
+  suffix: DNA scrambler
   parent: BaseImplantOnlyImplanterSyndi
   components:
     - type: Implanter
@@ -212,7 +214,7 @@
 
 - type: entity
   id: MicroBombImplanter
-  name: micro-bomb implanter
+  suffix: micro-bomb
   parent: BaseImplantOnlyImplanterSyndi
   components:
     - type: Implanter
@@ -220,7 +222,7 @@
 
 - type: entity
   id: MacroBombImplanter
-  name: macro-bomb implanter
+  suffix: macro-bomb
   parent: BaseImplantOnlyImplanterSyndi
   components:
     - type: Implanter
@@ -228,7 +230,7 @@
 
 - type: entity
   id: DeathRattleImplanter
-  name: death rattle implanter
+  suffix: death rattle
   parent: BaseImplantOnlyImplanterSyndi
   components:
     - type: Implanter
@@ -236,7 +238,7 @@
 
 - type: entity
   id: DeathAcidifierImplanter
-  name: death acidifier implanter
+  suffix: death acidifier
   parent: BaseImplantOnlyImplanterSyndi
   components:
   - type: Implanter
@@ -246,8 +248,8 @@
 
 - type: entity
   id: MindShieldImplanter
-  name: mindshield implanter
-  parent: [ BaseImplantOnlyImplanter, BaseSecurityCommandContraband]
+  suffix: mindshield
+  parent: BaseImplantOnlyImplanter
   components:
     - type: Implanter
       implant: MindShieldImplant
