--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -56,7 +56,7 @@
 
 - type: entity
   id: PlayerStationAiEmpty
-  name: Station AI
+  name: AI Core
   description: The latest in Artificial Intelligences.
   parent:
   - BaseStructure
@@ -108,6 +108,8 @@
   - type: Actions
   - type: Eye
     drawFov: false
+  - type: Examiner
+    checkInRangeUnoccluded: false
   - type: InputMover
   - type: Tag
     tags:
