--- a/Resources/Prototypes/Recipes/Construction/Graphs/clothing/cardboard_mask.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/clothing/cardboard_mask.yml
@@ -4,7 +4,7 @@
   graph:
   - node: start
     edges:
-    - to: maskCardboard
+    - to: mask
       steps:
       - material: Cable
         amount: 5
