--- a/Resources/Prototypes/Recipes/Construction/Graphs/clothing/cardboard_mask.yml
+++ b/Resources/Prototypes/Recipes/Construction/Graphs/clothing/cardboard_mask.yml
@@ -12,5 +12,5 @@
       - material: Cardboard
         amount: 1
         doAfter: 2
-  - node: maskCardboard
+  - node: mask
     entity: ClothingMaskCardboard
