--- a/Resources/Prototypes/Objectives/thief.yml
+++ b/Resources/Prototypes/Objectives/thief.yml
@@ -428,6 +428,17 @@
   - type: Objective
     difficulty: 0.8
 
+- type: entity
+  parent: BaseThiefStealStructureObjective
+  id: ToiletGoldenStealObjective
+  components:
+  - type: NotJobRequirement
+    job: Captain
+  - type: StealCondition
+    stealGroup: ToiletGoldenDirtyWater
+  - type: Objective
+    difficulty: 2
+
 # Animal
 
 - type: entity
