--- a/Resources/Prototypes/tags.yml
+++ b/Resources/Prototypes/tags.yml
@@ -507,6 +507,9 @@
   id: Dice
 
 - type: Tag
+  id: Dish
+
+- type: Tag
   id: DiscreteHealthAnalyzer #So construction recipes don't eat medical PDAs
 
 - type: Tag
