--- a/Resources/Maps/Shuttles/emergency_lox.yml
+++ b/Resources/Maps/Shuttles/emergency_lox.yml
@@ -2245,6 +2245,12 @@ entities:
       parent: 670
 - proto: ComfyChair
   entities:
+  - uid: 229
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -1.5,7.5
+      parent: 670
   - uid: 245
     components:
     - type: Transform
@@ -2654,13 +2660,6 @@ entities:
       parent: 670
     - type: AtmosPipeColor
       color: '#0335FCFF'
-  - uid: 580
-    components:
-    - type: Transform
-      pos: -1.5,2.5
-      parent: 670
-    - type: AtmosPipeColor
-      color: '#0335FCFF'
   - uid: 581
     components:
     - type: Transform
@@ -2767,6 +2766,14 @@ entities:
       color: '#0335FCFF'
 - proto: GasPipeTJunction
   entities:
+  - uid: 195
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: -1.5,2.5
+      parent: 670
+    - type: AtmosPipeColor
+      color: '#0335FCFF'
   - uid: 532
     components:
     - type: Transform
@@ -2804,18 +2811,6 @@ entities:
       parent: 670
     - type: AtmosPipeColor
       color: '#0335FCFF'
-  - uid: 555
-    components:
-    - type: Transform
-      anchored: False
-      rot: -1.5707963267948966 rad
-      pos: -1.5,2.5
-      parent: 670
-    - type: AtmosPipeColor
-      color: '#0335FCFF'
-    - type: Physics
-      canCollide: True
-      bodyType: Dynamic
   - uid: 556
     components:
     - type: Transform
@@ -2870,6 +2865,8 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -3.5,-7.5
       parent: 670
+    - type: AtmosPipeColor
+      color: '#0335FCFF'
 - proto: GasVentPump
   entities:
   - uid: 533
@@ -3225,18 +3222,6 @@ entities:
     components:
     - type: Transform
       pos: -4.477701,-10.547245
-      parent: 670
-- proto: HospitalCurtainsOpen
-  entities:
-  - uid: 264
-    components:
-    - type: Transform
-      pos: -3.5,11.5
-      parent: 670
-  - uid: 270
-    components:
-    - type: Transform
-      pos: -1.5,11.5
       parent: 670
 - proto: InflatableWallStack
   entities:
@@ -4390,6 +4375,14 @@ entities:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -5.5,-12.5
+      parent: 670
+- proto: WindoorSecure
+  entities:
+  - uid: 230
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -2.5,6.5
       parent: 670
 - proto: WindoorSecureMedicalLocked
   entities:
