--- a/Resources/Prototypes/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/Loadouts/loadout_groups.yml
@@ -25,14 +25,14 @@
   - ClothingNeckTransPin
   - ClothingNeckAutismPin
   - ClothingNeckGoldAutismPin
-  - ClothingNeckSalamanderPin
-  - ClothingNeckMirosPin
-  - ClothingNeckLeviathanPin
-  - ClothingNeckVulturePin
-  - ClothingNeckAxolotlPin
-  - ClothingNeckFrontierPin
-  - ClothingNeckDeltaVPin
-  - ClothingNeckCosmaticDriftPin
+#  - ClothingNeckSalamanderPin
+#  - ClothingNeckMirosPin
+#  - ClothingNeckLeviathanPin
+#  - ClothingNeckVulturePin
+#  - ClothingNeckAxolotlPin
+#  - ClothingNeckFrontierPin
+#  - ClothingNeckDeltaVPin
+#  - ClothingNeckCosmaticDriftPin
 
 - type: loadoutGroup
   id: Glasses
