--- a/Resources/Prototypes/Loadouts/Miscellaneous/trinkets.yml
+++ b/Resources/Prototypes/Loadouts/Miscellaneous/trinkets.yml
@@ -131,98 +131,98 @@
     back:
     - ClothingNeckAutismPin
 
-- type: loadout
-  id: ClothingNeckGoldAutismPin
-  storage:
-    back:
-    - ClothingNeckGoldAutismPin
+#- type: loadout
+#  id: ClothingNeckGoldAutismPin
+#  storage:
+#    back:
+#    - ClothingNeckGoldAutismPin
 
-- type: loadout
-  id: ClothingNeckLizardPin
-  equipment: ClothingNeckLizardPin
+#- type: loadout
+#  id: ClothingNeckLizardPin
+#  equipment: ClothingNeckLizardPin
 
-- type: startingGear
-  id: ClothingNeckLizardPin
-  storage:
-    back:
-    - ClothingNeckLizardPin
+#- type: startingGear
+#  id: ClothingNeckLizardPin
+#  storage:
+#    back:
+#    - ClothingNeckLizardPin
 
-- type: loadout
-  id: ClothingNeckSalamanderPin
-  equipment: ClothingNeckSalamanderPin
+#- type: loadout
+#  id: ClothingNeckSalamanderPin
+#  equipment: ClothingNeckSalamanderPin
 
-- type: startingGear
-  id: ClothingNeckSalamanderPin
-  storage:
-    back:
-    - ClothingNeckSalamanderPin
+#- type: startingGear
+#  id: ClothingNeckSalamanderPin
+#  storage:
+#   back:
+#    - ClothingNeckSalamanderPin
 
-- type: loadout
-  id: ClothingNeckMirosPin
-  equipment: ClothingNeckMirosPin
+#- type: loadout
+#  id: ClothingNeckMirosPin
+#  equipment: ClothingNeckMirosPin
 
-- type: startingGear
-  id: ClothingNeckMirosPin
-  storage:
-    back:
-    - ClothingNeckMirosPin
+#- type: startingGear
+# id: ClothingNeckMirosPin
+#  storage:
+#    back:
+#    - ClothingNeckMirosPin
 
-- type: loadout
-  id: ClothingNeckLeviathanPin
-  equipment: ClothingNeckLeviathanPin
+#- type: loadout
+#  id: ClothingNeckLeviathanPin
+#  equipment: ClothingNeckLeviathanPin
 
-- type: startingGear
-  id: ClothingNeckLeviathanPin
-  storage:
-    back:
-    - ClothingNeckLeviathanPin
+#- type: startingGear
+#  id: ClothingNeckLeviathanPin
+#  storage:
+#    back:
+#    - ClothingNeckLeviathanPin
 
-- type: loadout
-  id: ClothingNeckVulturePin
-  equipment: ClothingNeckVulturePin
+#- type: loadout
+#  id: ClothingNeckVulturePin
+#  equipment: ClothingNeckVulturePin
 
-- type: startingGear
-  id: ClothingNeckVulturePin
-  storage:
-    back:
-    - ClothingNeckVulturePin
+#- type: startingGear
+#  id: ClothingNeckVulturePin
+#  storage:
+#    back:
+#    - ClothingNeckVulturePin
 
-- type: loadout
-  id: ClothingNeckAxolotlPin
-  equipment: ClothingNeckAxolotlPin
+#- type: loadout
+#  id: ClothingNeckAxolotlPin
+#  equipment: ClothingNeckAxolotlPin
 
-- type: startingGear
-  id: ClothingNeckAxolotlPin
-  storage:
-    back:
-    - ClothingNeckAxolotlPin
+#- type: startingGear
+#  id: ClothingNeckAxolotlPin
+#  storage:
+#    back:
+#    - ClothingNeckAxolotlPin
 
-- type: loadout
-  id: ClothingNeckFrontierPin
-  equipment: ClothingNeckFrontierPin
+#- type: loadout
+#  id: ClothingNeckFrontierPin
+#  equipment: ClothingNeckFrontierPin
 
-- type: startingGear
-  id: ClothingNeckFrontierPin
-  storage:
-    back:
-    - ClothingNeckFrontierPin
+#- type: startingGear
+#  id: ClothingNeckFrontierPin
+#  storage:
+#    back:
+#    - ClothingNeckFrontierPin
 
-- type: loadout
-  id: ClothingNeckDeltaVPin
-  equipment: ClothingNeckDeltaVPin
+#- type: loadout
+#  id: ClothingNeckDeltaVPin
+#  equipment: ClothingNeckDeltaVPin
 
-- type: startingGear
-  id: ClothingNeckDeltaVPin
-  storage:
-    back:
-    - ClothingNeckDeltaVPin
+#- type: startingGear
+#  id: ClothingNeckDeltaVPin
+#  storage:
+#    back:
+#    - ClothingNeckDeltaVPin
 
-- type: loadout
-  id: ClothingNeckCosmaticDriftPin
-  equipment: ClothingNeckCosmaticDriftPin
+#- type: loadout
+#  id: ClothingNeckCosmaticDriftPin
+#  equipment: ClothingNeckCosmaticDriftPin
 
-- type: startingGear
-  id: ClothingNeckCosmaticDriftPin
-  storage:
-    back:
-    - ClothingNeckCosmaticDriftPin
+#- type: startingGear
+#  id: ClothingNeckCosmaticDriftPin
+#  storage:
+#    back:
+#    - ClothingNeckCosmaticDriftPin
