Adds the Weh! sound to the lizard plushie's speech. This property is inherited by all other lizard plushies.

--- a/Resources/Prototypes/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/toys.yml
@@ -323,6 +323,10 @@
     equippedPrefix: lizard
     slots:
     - HEAD
+    # all yaml below this point prepares the plushie to be controlled
+  - type: Speech
+    speechVerb: Default
+    speechSounds: Weh
 
 - type: entity
   parent: PlushieLizard
