--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -758,6 +758,7 @@
       - WeaponDisablerPractice
       - WeaponLaserCarbinePractice
       - Zipties
+      - ClothingShoesLegShackles
     dynamicRecipes:
       - BoxBeanbag
       - BoxShotgunIncendiary
