--- a/Resources/Prototypes/Recipes/Lathes/security.yml
+++ b/Resources/Prototypes/Recipes/Lathes/security.yml
@@ -710,3 +710,10 @@
      Plastic: 1000
      Plasma: 500
      Glass: 500
+
+- type: latheRecipe
+  id: ClothingShoesLegShackles
+  result: ClothingShoesLegShackles
+  completetime: 3
+  materials:
+    Steel: 750
