--- a/Resources/Prototypes/Entities/Mobs/Species/diona.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/diona.yml
@@ -95,6 +95,8 @@
   - type: IgniteOnHeatDamage
     fireStacks: 1
     threshold: 12
+    preventedByHydration: true
+    dehydrationMultiplier: 2
   - type: GibAction
     actionPrototype: DionaGibAction
     allowedStates:
