add space carp and sharkminnow teeth

--- a/Resources/Prototypes/tags.yml
+++ b/Resources/Prototypes/tags.yml
@@ -1261,6 +1261,12 @@
   id: Toolbox
 
 - type: Tag
+  id: ToothSharkminnow
+
+- type: Tag
+  id: ToothSpaceCarp
+
+- type: Tag
   id: Torch
 
 - type: Tag
