added a few chatsan entries

--- a/Resources/Prototypes/Accents/word_replacements.yml
+++ b/Resources/Prototypes/Accents/word_replacements.yml
@@ -437,6 +437,10 @@
     chatsan-word-54: chatsan-replacement-54
     chatsan-word-55: chatsan-replacement-55
     chatsan-word-56: chatsan-replacement-56
+    chatsan-word-57: chatsan-replacement-57
+    chatsan-word-58: chatsan-replacement-58
+    chatsan-word-59: chatsan-replacement-59
+    chatsan-word-60: chatsan-replacement-60
 
 - type: accent
   id: liar
