--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -809,6 +809,7 @@
       - WeaponLaserCarbine
       - WeaponXrayCannon
       - ClothingBackpackElectropack
+      - ClothingOuterStraightjacket
   - type: MaterialStorage
     whitelist:
       tags:
