--- a/Resources/Prototypes/Recipes/Crafting/bots.yml
+++ b/Resources/Prototypes/Recipes/Crafting/bots.yml
@@ -76,15 +76,15 @@
     sprite: Mobs/Silicon/Bots/supplybot.rsi
     state: supplybot
 
-- type: construction
-  name: securitron
-  id: Securitron
-  graph: MediBot
-  startNode: start
-  targetNode: bot
-  category: construction-category-utilities
-  objectType: Item
-  description: This bot can be loaded with cargo to make deliveries.
-  icon:
-    sprite: Mobs/Silicon/Bots/securitron.rsi
-    state: securitron1
+#- type: construction
+#  name: securitron
+#  id: Securitron
+#  graph: MediBot
+#  startNode: start
+#  targetNode: bot
+#  category: construction-category-utilities
+#  objectType: Item
+#  description: This bot can be loaded with cargo to make deliveries.
+#  icon:
+#    sprite: Mobs/Silicon/Bots/securitron.rsi
+#    state: securitron1
