--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/Salvage/spawners.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/Salvage/spawners.yml
@@ -388,15 +388,15 @@
   table: !type:GroupSelector
     children:
     - id: MobCarpSalvage
-      weight: 60
+      weight: 65
     - id: MobCarpSalvage
       weight: 25
       amount: !type:RangeNumberSelector
         range: 1, 3
     - !type:AllSelector
-      weight: 15
+      weight: 10
       children:
-      - id: MobShark
+      - id: MobSharkSalvage
       - id: MobCarpSalvage
         amount: !type:ConstantNumberSelector
           value: 3
@@ -451,7 +451,7 @@
   - type: EntityTableSpawner
     table: !type:AllSelector
       children:
-      - id: MobShark
+      - id: MobSharkSalvage
       - id: MobCarpSalvage
         amount: !type:ConstantNumberSelector
           value: 3
