--- a/Resources/Prototypes/Accents/word_replacements.yml
+++ b/Resources/Prototypes/Accents/word_replacements.yml
@@ -441,6 +441,8 @@
     chatsan-word-58: chatsan-replacement-58
     chatsan-word-59: chatsan-replacement-59
     chatsan-word-60: chatsan-replacement-60
+    chatsan-word-61: chatsan-replacement-60
+    chatsan-word-62: chatsan-replacement-60
 
 - type: accent
   id: liar
