--- a/Resources/Prototypes/Accents/word_replacements.yml
+++ b/Resources/Prototypes/Accents/word_replacements.yml
@@ -447,6 +447,7 @@
     chatsan-word-64: chatsan-replacement-64
     chatsan-word-65: chatsan-replacement-65
     chatsan-word-66: chatsan-replacement-66
+    chatsan-word-67: chatsan-replacement-67
 
 - type: accent
   id: liar
