updated cog and increased popcap to 80

--- a/Resources/Prototypes/Maps/cog.yml
+++ b/Resources/Prototypes/Maps/cog.yml
@@ -3,7 +3,7 @@
   mapName: 'Cog'
   mapPath: /Maps/cog.yml
   minPlayers: 35
-  maxPlayers: 70
+  maxPlayers: 80 #big map
   stations:
     Cog:
       stationProto: StandardNanotrasenStation
