--- a/Resources/Prototypes/Datasets/Names/gray_last.yml
+++ b/Resources/Prototypes/Datasets/Names/gray_last.yml
@@ -18,3 +18,9 @@
   # Myth and legend
   - Barathium # belief of moths flying at night signalling the reception of a letter
   - Dadodododo # Greek figure associated with Hero, and similar sounding to Oleander hawk-moth
+  - Ah
+  - Buudie
+  - Lumari
+  - Lox
+  - Geu
+  - Nuun
