Sentient shouldn't apply to the botany tray.

--- a/Resources/Prototypes/Hydroponics/randomMutations.yml
+++ b/Resources/Prototypes/Hydroponics/randomMutations.yml
@@ -6,6 +6,7 @@
       mutation: !type:Glow # new effect   
     - name: Sentient
       baseOdds: 0.0072
+      appliesToPlant: false #current makes the botany tray sentient.
       mutation: !type:MakeSentient #existing effect.
     - name: Slippery
       baseOdds: 0.0072
