--- a/Resources/Prototypes/Maps/saltern-mwg.yml
+++ b/Resources/Prototypes/Maps/saltern-mwg.yml
@@ -1,12 +1,12 @@
 - type: gameMap
-  id: Saltern
+  id: MWG-Saltern
   mapName: 'MWG-Saltern'
   mapPath: /Maps/saltern-mwg.yml
   minPlayers: 0
   maxPlayers: 35
   fallback: true
   stations:
-    Saltern:
+    MWG-Saltern:
       stationProto: StandardNanotrasenStation
       components:
         - type: StationNameSetup
