Add the ability for admin ghosts and cyborgs to buckle

--- a/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
@@ -4,6 +4,7 @@
   name: admin observer
   categories: [ HideSpawnMenu ]
   components:
+  - type: Buckle
   - type: ContentEye
     maxZoom: 8.916104, 8.916104
   - type: Tag
