--- a/Resources/Audio/StationEvents/attributions.yml
+++ b/Resources/Audio/StationEvents/attributions.yml
@@ -12,3 +12,8 @@
   license: "CC-BY-3.0"
   copyright: "Created by Donchan"
   source: "https://www.youtube.com/watch?v=4nUpeYLKUns"
+
+- files: ["hurry_up.ogg"]
+  license: "Custom"
+  copyright: "Hurry Up! by Ryoji Yoshitomi"
+  source: "https://youtube.com/watch?v=fihc2ONQ5v0"
