--- a/Resources/Prototypes/SoundCollections/NukeMusic.yml
+++ b/Resources/Prototypes/SoundCollections/NukeMusic.yml
@@ -5,3 +5,4 @@
     - /Audio/StationEvents/countdown.ogg
     - /Audio/StationEvents/clearly_nuclear.ogg    
     - /Audio/StationEvents/sound_station_14.ogg
+    - /Audio/StationEvents/hurry_up.ogg
