Included new music batch

--- a/Resources/Prototypes/SoundCollections/lobby.yml
+++ b/Resources/Prototypes/SoundCollections/lobby.yml
@@ -16,3 +16,16 @@
     - /Audio/Lobby/every_light_is_blinking_at_once.ogg
     - /Audio/Lobby/atomicamnesiammx.ogg
     - /Audio/Lobby/mt_amient_vs_spasm.ogg
+    - /Audio/Lobby/4ff.ogg
+    - /Audio/Lobby/constellations.ogg
+    - /Audio/Lobby/final_tag_roll.ogg
+    - /Audio/Lobby/last_hoorah.ogg
+    - /Audio/Lobby/lax_lullaby.ogg
+    - /Audio/Lobby/live_studio_audience.ogg
+    - /Audio/Lobby/lost_in_recollection.ogg
+    - /Audio/Lobby/morning_glow.ogg
+    - /Audio/Lobby/move_me.ogg
+    - /Audio/Lobby/ordinary_days.ogg
+    - /Audio/Lobby/rolling_down_the_street_in_my_katamari.ogg
+    - /Audio/Lobby/shred.ogg
+    - /Audio/Lobby/thrashard_in_the_cave.ogg
