--- a/Resources/Audio/Jukebox/attributions.yml
+++ b/Resources/Audio/Jukebox/attributions.yml
@@ -25,3 +25,68 @@
   license: "CC-BY-SA-3.0"
   copyright: "Sunset by PigeonBeans. Exported in Mono OGG."
   source: "https://soundcloud.com/pigeonbeans/sunset"
+
+- files: ["mt_amient_vs_spasm.ogg"]
+  license: "Custom"
+  copyright: "Mt. Amient vs Spasm by Soichi Terada."
+  source: "https://youtu.be/Ov5OkgHyAxk"
+
+- files: ["move_me.ogg"]
+  license: "Custom"
+  copyright: "Move Me by Kohta Takahashi. Converted to mono OGG."
+  source: "https://youtube.com/watch?v=re1IjZsUGtU"
+
+- files: ["shred.ogg"]
+  license: "Custom"
+  copyright: "Shred by B. Bravo & Lean Rock. Converted to mono OGG."
+  source: "https://youtube.com/watch?v=mD-8nkjWZbY"
+
+- files: ["morning_glow.ogg"]
+  license: "Custom"
+  copyright: "Morning Glow (Ft. Nicholas Mangiafico) by Doc McLennon. Converted to mono OGG."
+  source: "https://youtube.com/watch?v=rtZyj33tlyI"
+
+- files: ["lost_in_recollection.ogg"]
+  license: "Custom"
+  copyright: "Lost in Recollection by DrTapeworm. Converted to mono OGG."
+  source: "https://youtube.com/watch?v=H3bmVqHQLVs"
+
+- files: ["final_tag_roll.ogg"]
+  license: "Custom"
+  copyright: "Final Tag Roll by Rukunetsu. Converted to mono OGG."
+  source: "https://youtube.com/watch?v=04RJSbQYKa0"
+
+- files: ["last_hoorah.ogg"]
+  license: "Custom"
+  copyright: "Last Hoorah by KiloWatts. Converted to mono OGG."
+  source: "https://youtube.com/watch?v=1XTPrbI6O_Y"
+
+- files: ["ordinary_days.ogg"]
+  license: "Custom"
+  copyright: "Ordinary Days by Klaus Veen. Converted to mono OGG."
+  source: "https://youtube.com/watch?v=7WJeMcfQxhg"
+
+- files: ["4ff.ogg"]
+  license: "Custom"
+  copyright: "4ff by NANORAY. Converted to mono OGG."
+  source: "https://youtube.com/watch?v=alZKAFzd218"
+
+- files: ["rolling_down_the_street_in_my_katamari.ogg"]
+  license: "Custom"
+  copyright: "Rolling Down The Street, In My Katamari by Fearofdark. Converted to mono OGG."
+  source: "https://youtube.com/watch?v=sOa4VVlI9tE"
+
+- files: ["thrashard_in_the_cave.ogg"]
+  license: "Custom"
+  copyright: "Thrashard In The Cave: Stage 2 (Arrange Ver.) by Sota Fujimori. Converted to mono OGG."
+  source: "https://youtube.com/watch?v=jvMUnnK8oWc"
+
+- files: ["live_studio_audience.ogg"]
+  license: "Custom"
+  copyright: "Live Studio Audience by Tyron. Converted to mono OGG."
+  source: "https://youtube.com/watch?v=AWPX_SjL_CA"
+
+- files: ["lax_lullaby.ogg"]
+  license: "Custom"
+  copyright: "Lax Lullaby by Eero Lahtinen. Converted to mono OGG."
+  source: "https://youtube.com/watch?v=8Jo5v0yo1Mg"
