fixed an error in artist credit

--- a/Resources/Audio/Lobby/attributions.yml
+++ b/Resources/Audio/Lobby/attributions.yml
@@ -131,7 +131,7 @@
 
 - files: ["lax_lullaby.ogg"]
   license: "Custom"
-  copyright: "Lax Lullaby by KiloWatts."
+  copyright: "Lax Lullaby by Eero Lahtinen."
   source: "https://youtube.com/watch?v=8Jo5v0yo1Mg"
 
 - files: ["constellations.ogg"]
